--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js"
   },
   "author": "",
   "license": "ISC",
@@ -12,6 +12,7 @@
     "body-parser": "^1.18.3",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
+    "firebase": "^9.15.0",
     "git": "^0.1.5",
     "github": "^14.0.0",
     "lodash": "^4.17.21",
